--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "cowriter",
   "version": "0.1.0",
-  "main": "main.js",
+  "main": "app/src/main.js",
+  "author": "yayanyang <yayanyang@gmail.com>",
+  "license": "MIT",
+  "repository": "https://github.com/cowriter/electron-cowriter.git",
+  "homepage": "https://github.com/cowriter/electron-cowriter",
   "devDependencies": {
     "devtron": "^1.2.1",
     "electron-prebuilt": "^1.3.1",
     "gulp": "^3.9.1",
     "gulp-typescript": "^2.13.6",
-    "typescript": "^1.8.10"
+    "typescript": "^1.8.10",
+    "vue": "^1.0.26-csp"
   }
 }
