--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "electron-prebuilt": "^1.3.1",
     "gulp": "^3.9.1",
     "gulp-typescript": "^2.13.6",
+    "jquery": "^3.1.0",
     "typescript": "^1.8.10",
     "vue": "^1.0.26-csp"
   }
