--- a/app/package.json
+++ b/app/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "cowriter",
+  "name": "electron-cowriter",
   "version": "0.0.0",
-  "description": "cowriter base on electron-vue ",
+  "description": "electron base markdown editor ",
   "main": "electron.js",
   "dependencies": {
-    "vue": "next",
+    "vue": "^1.0.26",
     "vue-electron": "^1.0.0",
     "vue-resource": "^0.7.0",
-    "vue-router": "next",
-    "vuex": "next"
+    "vue-router": "^0.7.13",
+    "vuex": "^0.6.3"
   },
   "devDependencies": {},
-  "author": "yayanyang <yayanyang@gmail.com>"
+  "author": ""
 }
